Fix msrv job on windows
Signed-off-by: Jiahao XU <Jiahao_XU@outlook.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,7 @@ jobs:
     - run: |
         rustup toolchain install $MSRV --profile minimal
         rustup override set $MSRV
+      shell: bash
 
     - run: cargo -vV
 
