Fix `release-pr.yml`: Specify `crate-name` for `release-pr`
Signed-off-by: Jiahao XU <Jiahao_XU@outlook.com>

--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -38,3 +38,4 @@ jobs:
           check-package: true
           crate-release-all: true
           crate-path: ./
+          crate-name: simple-git
